--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <div class="about">
+    <h1>World Safari Tours</h1>
+
+  </div>
+
     <%= yield %>
   </body>
 </html>
