--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -20,3 +20,22 @@ h1 {
   font-size: 100px;
 }
 
+.navbar-brand {
+color: #ffffff;
+font-weight: bold;
+font-family: 'quicksandbold_italic', sans-serif;
+font-size:25px;
+margin-left: auto
+
+}
+
+a {
+   text-decoration: none;
+}
+
+ 
+
+
+
+
+
