--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,15 @@
   <body>
     <div class="about">
     <h1>World Safari Tours</h1>
+    <a class="navbar-brand" href="#">new location</a>
+    
+  
 
   </div>
+
+
+
+  
 
     <%= yield %>
   </body>
